# cleaner

./: .buildinfo  .gitignore  LICENSE  MIGRATION.md  README.md  RPM_MIGRATION.md  cleaner.html  genindex.html  index.html  install_system_files.py  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  recodex-cleaner.spec  requirements.txt  search.html  searchindex.js  setup.py  test_migration.py  test_spec_migration.py
_modules/: index.html
_modules/cleaner/: cleaner.html  config_manager.html  main.html
_sources/: cleaner.txt  index.txt  modules.txt
cleaner/: __init__.py  cleaner.py  config_manager.py  main.py
cleaner/install/: config.yml  recodex-cleaner.service  recodex-cleaner.timer
docs/: Makefile  conf.py  index.rst  make.bat
install/: config.yml
